# SmolCore3D

./: CMakeLists.txt  README.md  SmolCore3D.cpp
cmake/: Config.cmake.in
source/smol/: core3d.hpp
source/smol/core3d/: mat4x4.hpp  vec3.hpp  vec4.hpp
tests/: main.cpp
